# MVA

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  SELF_IMPROVEMENT.md  config copy.yml  new.txt  pyproject.toml
.mva/: model.yaml
.mva/plugins/: example_logger.py
.mva/skills/example-skill/: SKILL.md
.mva/skills/web-search/: SKILL.md
docs/: AGENT.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  LLM_CLIENTS.md  QUICKSTART.md  README.md  SELF_IMPROVEMENT_PLAN.md  SKILLS.md  TOOLS.md  adding_tools.md  async_input_plan.md  cli_improvements.md  deepseek_integration.md  design.md  memory_system.md  model_yaml_format.md  new_cli_design.md  provider_integration.md  security.md  v2.1_monorepo_plan.md
sandbox/: test_tool.txt
skills/: .gitkeep  README.md
skills/create-skill/: SKILL.md
skills/python-tool-crafter/: SKILL.md
skills/python-tool-crafter/scripts/: replace_text.py
skills/reflect/: SKILL.md
skills/self-improve/: SKILL.md
src/mva/: __init__.py  __main__.py  cli.py  config.py
src/mva/agent/: __init__.py  _system.py  base.py  client.py  reflection.py  session.py  skills.py  telemetry.py  tools.py  types.py
src/mva/agent/tools/: __init__.py  base.py  path_security.py  registry.py
src/mva/cli/: __init__.py  _commands.py  app.py  console.py  renderer.py  repl.py
src/mva/llm/: __init__.py  client.py
src/mva/skills/: __init__.py
src/mva/tools/: __init__.py  base.py  path_security.py  registry.py
src/mva/tools/builtin/: __init__.py  bash.py  edit.py  read.py  (+2 more)
src/mva/utils/: __init__.py  config.py  llm_client.py  log.py
tools/: README.md
(+7 files in other folders)
