[project]
name = "mva"
version = "0.1.0"
description = "A Minimum Viable Agent harness"
readme = "README.md"
authors = [{ name = "ldang", email = "lam.dv@live.com" }]
requires-python = ">=3.13"
dependencies = [
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "rich>=15.0.0",
  "streamlit>=1.57.0",
  "streamlit-extras>=1.5.0",
  "typer>=0.25.1",
]

[project.scripts]
mva = "mva:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pylint>=4.0.5"]
