[project]
name = "mva"
version = "0.1.0"
description = "A Minimum Viable Agent harness — monorepo root"
readme = "README.md"
authors = [{ name = "ldang", email = "lam.dv@live.com" }]
requires-python = ">=3.13"

[project.scripts]
mva = "mva:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
mva-core = { workspace = true }
mva-cli = { workspace = true }

[dependency-groups]
dev = ["pylint>=4.0.5"]
